# python-template

./: .copier-answers.example.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  copier.yml  justfile  pyproject.toml
docs/: development.md  formatting.md  hex.md
scripts/: check-template.sh  post_render.py
template/common/: .editorconfig  .gitignore  .python-version.jinja  README.md.jinja  justfile.jinja  pyproject.toml.jinja
template/common/config/: .pre-commit-config.yaml.jinja  justfile.jinja  pyproject.toml.jinja
template/common/project/: README.md.jinja
template/common/tests/: test_smoke.py.jinja
template/variants/no-package/: main.py.jinja
template/variants/package/flat/src/{{ project_module }}/: cli.py.jinja  main.py.jinja
template/variants/package/hexagonal/docs/: architecture.md.jinja
template/variants/package/hexagonal/src/{{ project_module }}/: __main__.py.jinja  app.py.jinja  bootstrap.py.jinja  main.py.jinja
template/variants/package/hexagonal/src/{{ project_module }}/adapters/inbound/: cli_typer.py.jinja
template/variants/package/hexagonal/src/{{ project_module }}/application/: dto.py.jinja  services.py.jinja  use_cases.py.jinja
template/variants/package/hexagonal/src/{{ project_module }}/cli/: __init__.py.jinja  cli_typer.py.jinja  commands.py.jinja  typer_app.py.jinja
template/variants/package/hexagonal/src/{{ project_module }}/config/: settings.py.jinja
template/variants/package/hexagonal/src/{{ project_module }}/domain/: entities.py.jinja  ports.py.jinja  value_objects.py.jinja
tests/: test_template_smoke.py
(+13 files in other folders)
